--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-spacy>=3.0.0,<4.0.0 https://github.com/explosion/spacy-models/releases/download/pt_core_news_sm-3.6.0/pt_core_news_sm-3.6.0.tar.gz#egg=pt_core_news_sm
+spacy==3.6.1
 pandas==1.5.3
 wordcloud==1.9.2
 matplotlib==3.7.0
